--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cat-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://aaronc0509.github.io/monster-rolodex/",
+  "homepage": "https://aaronc0509.github.io/monster-rolodex",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
